HEAD
	+ Check if mail is already in use in groups form. Fix ZS-39 #1975
	+ Disable the "Disable account" checkbox for critical system Users. Fix ZS-169
7.0.2
	+ Remove deprecated flag from ldbsearch
7.0.1
	+ Fix ADC join to an existent domain
	+ Fix config backup replacing legacy dns path in favor of bind-dns (fix #2025)
7.0.0
	+ Change default login shell under PAM to /usr/bin/bash
	+ Integrate Samba 4.11
6.2.0
	+ Set version number to 6.2.0
6.1.2
	+ Add enable/disable input vfs full_audit module feature for commercial edition
	+ Add "samba settings" tab to the FileSharing composite
6.1.1
	+ Add users and groups importer GUI feature for commercial edition
	+ Add users and groups exporter GUI feature for commercial edition
6.1
	+ Add users/groups import/export scripts to /usr/share/zentyal-samba. (fixes #1852)
	+ Add pagination to the tree view
	+ Do not try to listen on unconfigured network interfaces
6.0.1
	+ Add missing dynamic RPC ports in firewall rules
6.0
	+ Integration with RADIUS module
	+ Integrate Samba 4.7
	+ Fix group permissions when selecting "All domain users"
	+ Remove unused 1024 port from service list
	+ Add confkey to allow Administrator user in shares permissions for
	  backwards compatibility with Zentyal 3.0
5.1.2
	+ Enforce share directory creation if not exists, even if not tagged
	+ Enforce change of homeDrive for existing users
	+ Fix regression deleting share directory after removing ebox ACL
	+ Fix bug with shared state for shares and roaming profiles sync
5.1.1
	+ Add administrators also to write list in smb.conf
5.1
	+ Domain is now a menu item instead of a folder with just one subitem
	+ Add notice about GPO management in Domain section
	+ Set homeDrive, homeDirectory and profilePath attributes after
	  adding new users without need of explicit save change operation
	+ Remove no longer required zentyal user ACLs on share paths
	+ Comment field is now optional when adding a share