@@ -20,7 +20,7 @@ sub createLDAPUsers
     for my $line(@lines) {
         my($samAccountName, $parentDN, $givenName, $initials, $sn, $displayName, $description, $mail, $password, $isSystemUser, $uid, $groups) = split(';', $line);
 	    try {
-            EBox::Samba::User->create(
+            my $user = EBox::Samba::User->create(
                 samAccountName => $samAccountName, 
                 parent => getLDAPContainer($parentDN),
                 givenName => $givenName,
@@ -32,6 +32,11 @@ sub createLDAPUsers
                 name => $samAccountName,
                 password => $password,
             );
+            my $global = EBox::Global->getInstance();
+            my $mod = $global->modExists('mail') ? $global->modInstance('mail') : $global->modInstance('samba');
+            $mod->checkMailNotInUse($address);
+            $user->set('mail', $mail, 1);
+            $user->save();
             print "$samAccountName OK\n";
         } catch ($e){
             warn "Caught error: $e";
