@@ -1,4 +1,5 @@
 HEAD
+	+ Fix users email import. Fix ZS-159
 	+ Check if mail is already in use in groups form. Fix ZS-39 #1975
 	+ Disable the "Disable account" checkbox for critical system Users. Fix ZS-169
 7.0.2
